--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
 
-    <!-- Primary Meta Tags -->
-    <title>The Poly-Interface Portal | 6 Ways to Explore One Universe</title>
-    <meta name="title" content="The Poly-Interface Portal | 6 Ways to Explore One Universe" />
-    <meta name="description" content="Experience the same projects through 6 wildly different interfaces: Neural Map, Anatomical Explorer, Retro OS, Pirate Radio, Control Room, and 3D Vending Machine. Roll the dice or choose your reality." />
-    <meta name="keywords" content="portfolio, creative, interfaces, react, 3D, interactive, experimental" />
-    <meta name="author" content="LokiSlayer" />
-    <meta name="theme-color" content="#0a0a1a" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://poly-interface-portal.vercel.app/" />
-    <meta property="og:title" content="The Poly-Interface Portal | 6 Ways to Explore One Universe" />
-    <meta property="og:description" content="Experience the same projects through 6 wildly different interfaces. Roll the dice or choose your reality." />
-    <meta property="og:image" content="/og-image.png" />
+  <!-- Primary Meta Tags -->
+  <title>The Poly-Interface Portal | 6 Ways to Explore One Universe</title>
+  <meta name="title" content="The Poly-Interface Portal | 6 Ways to Explore One Universe" />
+  <meta name="description"
+    content="Experience the same projects through 6 wildly different interfaces: Neural Map, Anatomical Explorer, Retro OS, Pirate Radio, Control Room, and 3D Vending Machine. Roll the dice or choose your reality." />
+  <meta name="keywords" content="portfolio, creative, interfaces, react, 3D, interactive, experimental" />
+  <meta name="author" content="Lokiportal" />
+  <meta name="theme-color" content="#0a0a1a" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://poly-interface-portal.vercel.app/" />
-    <meta property="twitter:title" content="The Poly-Interface Portal | 6 Ways to Explore" />
-    <meta property="twitter:description" content="Experience the same projects through 6 wildly different interfaces. Roll the dice or choose your reality." />
-    <meta property="twitter:image" content="/og-image.png" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://poly-interface-portal.vercel.app/" />
+  <meta property="og:title" content="The Poly-Interface Portal | 6 Ways to Explore One Universe" />
+  <meta property="og:description"
+    content="Experience the same projects through 6 wildly different interfaces. Roll the dice or choose your reality." />
+  <meta property="og:image" content="/og-image.png" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://poly-interface-portal.vercel.app/" />
+  <meta property="twitter:title" content="The Poly-Interface Portal | 6 Ways to Explore" />
+  <meta property="twitter:description"
+    content="Experience the same projects through 6 wildly different interfaces. Roll the dice or choose your reality." />
+  <meta property="twitter:image" content="/og-image.png" />
 
-    <!-- Preconnect to external resources -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+  <!-- Preconnect to external resources -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
